Fri Jan 22 17:53:20 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/extract.pl:
        * performance-tests/Bench/bin/genstats.pl:
        * performance-tests/Bench/bin/lj-plots.gp:
        * performance-tests/Bench/bin/plot-jitter.gp:
        * performance-tests/Bench/bin/plot-transports.gp:
        * performance-tests/Bench/bin/reduce.pl:

          New data reduction and data visualization scripts to process
          latency testing results.

        * performance-tests/Bench/tools/convert-all:
        * performance-tests/Bench/tools/plot-all.gp:

          New data reduction and plotting scripts usable in a Linux
          environment after executing the latency tests as described in
          the doc/latency-commands file.

Fri Jan 22 16:09:19 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:

          Temporarily disabled nightly BidirMessenger tests until
          transport issues have been resolved.

        * tests/DCPS/Messenger/Writer.cpp:

          Fixed locally modified constant used for stress testing.

Thu Jan 21 19:06:39 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/BidirMessenger/DataReaderListener.h:
        * tests/DCPS/BidirMessenger/DataReaderListener.cpp:
        * tests/DCPS/BidirMessenger/Writer.h:
        * tests/DCPS/BidirMessenger/Writer.cpp:
        * tests/DCPS/BidirMessenger/pubsub.cpp:
        * tests/DCPS/BidirMessenger/run_test.pl:
        * tests/DCPS/Messenger/Writer.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:

          Applied changes submitted by Don Busch to BidirMessenger test.

Thu Jan 21 18:42:57 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:

          Fixed incorrect access modifier on default ctor.

Thu Jan 21 18:41:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h: