@@ -1,3 +1,11 @@
+Fri Jan 22 19:46:57 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/ReceiveListenerSetMap.h:
+        * dds/DCPS/transport/framework/TransportImpl.cpp:
+        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
+
+          Fixed `interface' naming conflicts which affect some platforms.
+
 Fri Jan 22 17:53:20 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/Bench/bin/extract.pl:
